--- a/视频详情.html
+++ b/视频详情.html
@@ -63,7 +63,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u90" class="ax_default label selected">
+      <div id="u90" class="ax_default label selected" selectiongroup="1">
         <div id="u90_div" class="selected"></div>
         <div id="u90_text" class="text ">
           <p><span>详情</span></p>
@@ -71,7 +71,7 @@
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u91" class="ax_default label">
+      <div id="u91" class="ax_default label" selectiongroup="1">
         <div id="u91_div" class=""></div>
         <div id="u91_text" class="text ">
           <p><span>相关视频</span></p>
