--- a/高考头条.html
+++ b/高考头条.html
@@ -502,7 +502,7 @@
             <div id="u516" class="ax_default label">
               <div id="u516_div" class=""></div>
               <div id="u516_text" class="text ">
-                <p><span>高考e直播</span></p><p><span><br></span></p>
+                <p><span>招办直播</span></p>
               </div>
             </div>
 
