--- a/高考王者首页.html
+++ b/高考王者首页.html
@@ -544,7 +544,7 @@
             <div id="u83" class="ax_default label">
               <div id="u83_div" class=""></div>
               <div id="u83_text" class="text ">
-                <p><span>高考e直播</span></p><p><span><br></span></p>
+                <p><span>招办直播</span></p>
               </div>
             </div>
 
@@ -1200,7 +1200,7 @@
       <div id="u190" class="ax_default button">
         <div id="u190_div" class=""></div>
         <div id="u190_text" class="text ">
-          <p><span>立即观看</span></p>
+          <p><span>免费观看</span></p>
         </div>
       </div>
 
@@ -1208,7 +1208,7 @@
       <div id="u191" class="ax_default button">
         <div id="u191_div" class=""></div>
         <div id="u191_text" class="text ">
-          <p><span>立即观看</span></p>
+          <p><span>免费观看</span></p>
         </div>
       </div>
 
@@ -1216,7 +1216,7 @@
       <div id="u192" class="ax_default button">
         <div id="u192_div" class=""></div>
         <div id="u192_text" class="text ">
-          <p><span>立即观看</span></p>
+          <p><span>免费观看</span></p>
         </div>
       </div>
 
