--- a/在线测评引导页.html
+++ b/在线测评引导页.html
@@ -26,230 +26,238 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u534" class="ax_default image">
-        <img id="u534_img" class="img " src="images/在线测评引导页/u534.png"/>
+        <img id="u534_img" class="img " src="images/高考王者首页/u0.png"/>
       </div>
 
-      <!-- Unnamed (图片 ) -->
-      <div id="u535" class="ax_default image">
-        <img id="u535_img" class="img " src="images/高考王者首页/u0.png"/>
-      </div>
+      <!-- Unnamed (组合 ) -->
+      <div id="u535" class="ax_default" data-left="39" data-top="119" data-width="385" data-height="684">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u536" class="ax_default box_3">
-        <div id="u536_div" class=""></div>
-      </div>
+        <!-- Unnamed (组合 ) -->
+        <div id="u536" class="ax_default" data-left="39" data-top="119" data-width="385" data-height="684">
 
-      <!-- Unnamed (矩形) -->
-      <div id="u537" class="ax_default label">
-        <div id="u537_div" class=""></div>
-        <div id="u537_text" class="text ">
-          <p><span>VVIP</span></p><p><span><br></span></p>
-        </div>
-      </div>
+          <!-- Unnamed (图片 ) -->
+          <div id="u537" class="ax_default image">
+            <img id="u537_img" class="img " src="images/在线测评引导页/u537.png"/>
+          </div>
 
-      <!-- Unnamed (矩形) -->
-      <div id="u538" class="ax_default label">
-        <div id="u538_div" class=""></div>
-        <div id="u538_text" class="text ">
-          <p><span>VIP</span></p>
-        </div>
-      </div>
+          <!-- Unnamed (矩形) -->
+          <div id="u538" class="ax_default box_3">
+            <div id="u538_div" class=""></div>
+          </div>
 
-      <!-- Unnamed (形状) -->
-      <div id="u539" class="ax_default icon">
-        <img id="u539_img" class="img " src="images/高考王者首页/u15.png"/>
-      </div>
+          <!-- tab (动态面板) -->
+          <div id="u539" class="ax_default ax_default_hidden" data-label="tab" style="display:none; visibility: hidden">
+            <div id="u539_state0" class="panel_state" data-label="State1" style="">
+              <div id="u539_state0_content" class="panel_state_content">
 
-      <!-- tab (动态面板) -->
-      <div id="u540" class="ax_default ax_default_hidden" data-label="tab" style="display:none; visibility: hidden">
-        <div id="u540_state0" class="panel_state" data-label="State1" style="">
-          <div id="u540_state0_content" class="panel_state_content">
+                <!-- Unnamed (矩形) -->
+                <div id="u540" class="ax_default box_1">
+                  <div id="u540_div" class=""></div>
+                </div>
 
-            <!-- Unnamed (矩形) -->
-            <div id="u541" class="ax_default box_1">
-              <div id="u541_div" class=""></div>
-            </div>
+                <!-- Unnamed (占位符) -->
+                <div id="u541" class="ax_default placeholder">
+                  <img id="u541_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
 
-            <!-- Unnamed (占位符) -->
-            <div id="u542" class="ax_default placeholder">
-              <img id="u542_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
+                <!-- Unnamed (矩形) -->
+                <div id="u542" class="ax_default label">
+                  <div id="u542_div" class=""></div>
+                  <div id="u542_text" class="text ">
+                    <p><span>首页</span></p>
+                  </div>
+                </div>
 
-            <!-- Unnamed (矩形) -->
-            <div id="u543" class="ax_default label">
-              <div id="u543_div" class=""></div>
-              <div id="u543_text" class="text ">
-                <p><span>首页</span></p>
+                <!-- Unnamed (占位符) -->
+                <div id="u543" class="ax_default placeholder">
+                  <img id="u543_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u544" class="ax_default label">
+                  <div id="u544_div" class=""></div>
+                  <div id="u544_text" class="text ">
+                    <p><span>小游戏</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u545" class="ax_default placeholder">
+                  <img id="u545_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u546" class="ax_default label">
+                  <div id="u546_div" class=""></div>
+                  <div id="u546_text" class="text ">
+                    <p><span>高考头条</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u547" class="ax_default placeholder">
+                  <img id="u547_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u548" class="ax_default label">
+                  <div id="u548_div" class=""></div>
+                  <div id="u548_text" class="text ">
+                    <p><span>在线讲堂</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u549" class="ax_default placeholder">
+                  <img id="u549_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u550" class="ax_default label">
+                  <div id="u550_div" class=""></div>
+                  <div id="u550_text" class="text ">
+                    <p><span>在线测评</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u551" class="ax_default placeholder">
+                  <img id="u551_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u552" class="ax_default label">
+                  <div id="u552_div" class=""></div>
+                  <div id="u552_text" class="text ">
+                    <p><span>实战练习</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u553" class="ax_default placeholder">
+                  <img id="u553_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u554" class="ax_default label">
+                  <div id="u554_div" class=""></div>
+                  <div id="u554_text" class="text ">
+                    <p><span>线下讲座</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u555" class="ax_default placeholder">
+                  <img id="u555_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u556" class="ax_default label">
+                  <div id="u556_div" class=""></div>
+                  <div id="u556_text" class="text ">
+                    <p><span>招办直播</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (占位符) -->
+                <div id="u557" class="ax_default placeholder">
+                  <img id="u557_img" class="img " src="images/高考王者首页/u68.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u558" class="ax_default label">
+                  <div id="u558_div" class=""></div>
+                  <div id="u558_text" class="text ">
+                    <p><span>志愿填报</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (椭圆形) -->
+                <div id="u559" class="ax_default ellipse">
+                  <img id="u559_img" class="img " src="images/高考王者首页/u86.png"/>
+                </div>
+
+                <!-- Unnamed (矩形) -->
+                <div id="u560" class="ax_default label">
+                  <div id="u560_div" class=""></div>
+                  <div id="u560_text" class="text ">
+                    <p><span>131XXXX3456</span></p>
+                  </div>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u561" class="ax_default line">
+                  <img id="u561_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u562" class="ax_default line">
+                  <img id="u562_img" class="img " src="images/高考王者首页/u89.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u563" class="ax_default line">
+                  <img id="u563_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u564" class="ax_default line">
+                  <img id="u564_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u565" class="ax_default line">
+                  <img id="u565_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u566" class="ax_default line">
+                  <img id="u566_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u567" class="ax_default line">
+                  <img id="u567_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u568" class="ax_default line">
+                  <img id="u568_img" class="img " src="images/高考王者首页/u88.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u569" class="ax_default line">
+                  <img id="u569_img" class="img " src="images/高考王者首页/u96.png"/>
+                </div>
+
+                <!-- Unnamed (水平线) -->
+                <div id="u570" class="ax_default line">
+                  <img id="u570_img" class="img " src="images/高考王者首页/u96.png"/>
+                </div>
               </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u544" class="ax_default placeholder">
-              <img id="u544_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u545" class="ax_default label">
-              <div id="u545_div" class=""></div>
-              <div id="u545_text" class="text ">
-                <p><span>小游戏</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u546" class="ax_default placeholder">
-              <img id="u546_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u547" class="ax_default label">
-              <div id="u547_div" class=""></div>
-              <div id="u547_text" class="text ">
-                <p><span>高考头条</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u548" class="ax_default placeholder">
-              <img id="u548_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u549" class="ax_default label">
-              <div id="u549_div" class=""></div>
-              <div id="u549_text" class="text ">
-                <p><span>在线讲堂</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u550" class="ax_default placeholder">
-              <img id="u550_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u551" class="ax_default label">
-              <div id="u551_div" class=""></div>
-              <div id="u551_text" class="text ">
-                <p><span>在线测评</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u552" class="ax_default placeholder">
-              <img id="u552_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u553" class="ax_default label">
-              <div id="u553_div" class=""></div>
-              <div id="u553_text" class="text ">
-                <p><span>实战练习</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u554" class="ax_default placeholder">
-              <img id="u554_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u555" class="ax_default label">
-              <div id="u555_div" class=""></div>
-              <div id="u555_text" class="text ">
-                <p><span>线下讲座</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u556" class="ax_default placeholder">
-              <img id="u556_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u557" class="ax_default label">
-              <div id="u557_div" class=""></div>
-              <div id="u557_text" class="text ">
-                <p><span>高考e直播</span></p><p><span><br></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (占位符) -->
-            <div id="u558" class="ax_default placeholder">
-              <img id="u558_img" class="img " src="images/高考王者首页/u68.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u559" class="ax_default label">
-              <div id="u559_div" class=""></div>
-              <div id="u559_text" class="text ">
-                <p><span>志愿填报</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (椭圆形) -->
-            <div id="u560" class="ax_default ellipse">
-              <img id="u560_img" class="img " src="images/高考王者首页/u86.png"/>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u561" class="ax_default label">
-              <div id="u561_div" class=""></div>
-              <div id="u561_text" class="text ">
-                <p><span>131XXXX3456</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u562" class="ax_default line">
-              <img id="u562_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u563" class="ax_default line">
-              <img id="u563_img" class="img " src="images/高考王者首页/u89.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u564" class="ax_default line">
-              <img id="u564_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u565" class="ax_default line">
-              <img id="u565_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u566" class="ax_default line">
-              <img id="u566_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u567" class="ax_default line">
-              <img id="u567_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u568" class="ax_default line">
-              <img id="u568_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u569" class="ax_default line">
-              <img id="u569_img" class="img " src="images/高考王者首页/u88.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u570" class="ax_default line">
-              <img id="u570_img" class="img " src="images/高考王者首页/u96.png"/>
-            </div>
-
-            <!-- Unnamed (水平线) -->
-            <div id="u571" class="ax_default line">
-              <img id="u571_img" class="img " src="images/高考王者首页/u96.png"/>
             </div>
           </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u571" class="ax_default label">
+          <div id="u571_div" class=""></div>
+          <div id="u571_text" class="text ">
+            <p><span>VVIP</span></p><p><span><br></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u572" class="ax_default label">
+          <div id="u572_div" class=""></div>
+          <div id="u572_text" class="text ">
+            <p><span>VIP</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (形状) -->
+        <div id="u573" class="ax_default icon">
+          <img id="u573_img" class="img " src="images/在线测评引导页/u573.png"/>
         </div>
       </div>
     </div>
