--- a/在线讲堂-招办请回答.html
+++ b/在线讲堂-招办请回答.html
@@ -26,17 +26,17 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u675" class="ax_default image">
-        <img id="u675_img" class="img " src="images/高考王者首页/u0.png"/>
+        <img id="u675_img" class="img " src="images/高考王者首页（设计出图）/u0.png"/>
       </div>
 
       <!-- Unnamed (图片 ) -->
       <div id="u676" class="ax_default image">
-        <img id="u676_img" class="img " src="images/在线讲堂-专业解读/u631.png"/>
+        <img id="u676_img" class="img " src="images/在线讲堂-专业解读（设计出图）/u631.png"/>
       </div>
 
       <!-- Unnamed (图片 ) -->
       <div id="u677" class="ax_default image">
-        <img id="u677_img" class="img " src="images/在线讲堂-专业解读/u632.png"/>
+        <img id="u677_img" class="img " src="images/在线讲堂-专业解读（设计出图）/u632.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -62,7 +62,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u681" class="ax_default icon">
-        <img id="u681_img" class="img " src="images/高考王者首页/u15.png"/>
+        <img id="u681_img" class="img " src="images/高考王者首页（设计出图）/u15.png"/>
       </div>
 
       <!-- tab (动态面板) -->
@@ -77,7 +77,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u684" class="ax_default placeholder">
-              <img id="u684_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u684_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -90,7 +90,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u686" class="ax_default placeholder">
-              <img id="u686_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u686_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -103,7 +103,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u688" class="ax_default placeholder">
-              <img id="u688_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u688_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -116,7 +116,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u690" class="ax_default placeholder">
-              <img id="u690_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u690_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -129,7 +129,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u692" class="ax_default placeholder">
-              <img id="u692_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u692_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -142,7 +142,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u694" class="ax_default placeholder">
-              <img id="u694_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u694_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -155,7 +155,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u696" class="ax_default placeholder">
-              <img id="u696_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u696_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -168,7 +168,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u698" class="ax_default placeholder">
-              <img id="u698_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u698_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -181,7 +181,7 @@
 
             <!-- Unnamed (占位符) -->
             <div id="u700" class="ax_default placeholder">
-              <img id="u700_img" class="img " src="images/高考王者首页/u68.png"/>
+              <img id="u700_img" class="img " src="images/高考王者首页（设计出图）/u68.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -194,7 +194,7 @@
 
             <!-- Unnamed (椭圆形) -->
             <div id="u702" class="ax_default ellipse">
-              <img id="u702_img" class="img " src="images/高考王者首页/u86.png"/>
+              <img id="u702_img" class="img " src="images/高考王者首页（设计出图）/u86.png"/>
             </div>
 
             <!-- Unnamed (矩形) -->
@@ -207,52 +207,52 @@
 
             <!-- Unnamed (水平线) -->
             <div id="u704" class="ax_default line">
-              <img id="u704_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u704_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u705" class="ax_default line">
-              <img id="u705_img" class="img " src="images/高考王者首页/u89.png"/>
+              <img id="u705_img" class="img " src="images/高考王者首页（设计出图）/u89.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u706" class="ax_default line">
-              <img id="u706_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u706_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u707" class="ax_default line">
-              <img id="u707_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u707_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u708" class="ax_default line">
-              <img id="u708_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u708_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u709" class="ax_default line">
-              <img id="u709_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u709_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u710" class="ax_default line">
-              <img id="u710_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u710_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u711" class="ax_default line">
-              <img id="u711_img" class="img " src="images/高考王者首页/u88.png"/>
+              <img id="u711_img" class="img " src="images/高考王者首页（设计出图）/u88.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u712" class="ax_default line">
-              <img id="u712_img" class="img " src="images/高考王者首页/u96.png"/>
+              <img id="u712_img" class="img " src="images/高考王者首页（设计出图）/u96.png"/>
             </div>
 
             <!-- Unnamed (水平线) -->
             <div id="u713" class="ax_default line">
-              <img id="u713_img" class="img " src="images/高考王者首页/u96.png"/>
+              <img id="u713_img" class="img " src="images/高考王者首页（设计出图）/u96.png"/>
             </div>
           </div>
         </div>
