--- a/实战练习-真题及答案解析.html
+++ b/实战练习-真题及答案解析.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u720" class="ax_default image">
-        <img id="u720_img" class="img " src="images/高考王者首页/u0.png"/>
+        <img id="u720_img" class="img " src="images/高考王者首页（设计出图）/u0.png"/>
       </div>
 
       <!-- Unnamed (图片 ) -->
