--- a/立即报名.html
+++ b/立即报名.html
@@ -26,12 +26,12 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u907" class="ax_default image">
-        <img id="u907_img" class="img " src="images/高考王者首页/u0.png"/>
+        <img id="u907_img" class="img " src="images/高考王者首页（设计出图）/u0.png"/>
       </div>
 
       <!-- Unnamed (图片 ) -->
       <div id="u908" class="ax_default image">
-        <img id="u908_img" class="img " src="images/高考王者首页/u1.png"/>
+        <img id="u908_img" class="img " src="images/高考王者首页（设计出图）/u1.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -52,7 +52,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u911" class="ax_default icon">
-        <img id="u911_img" class="img " src="images/高考王者首页/u4.png"/>
+        <img id="u911_img" class="img " src="images/高考王者首页（设计出图）/u4.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -65,7 +65,7 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u913" class="ax_default image">
-        <img id="u913_img" class="img " src="images/高考王者首页/u6.png"/>
+        <img id="u913_img" class="img " src="images/高考王者首页（设计出图）/u6.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -96,7 +96,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u918" class="ax_default icon">
-        <img id="u918_img" class="img " src="images/高考王者首页/u15.png"/>
+        <img id="u918_img" class="img " src="images/高考王者首页（设计出图）/u15.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
